# Hancock

./: .env.example  .flake8  .gitignore  .gitmodules  0ai_agent.py  0ai_zero_day_guard.py  AGENTS.md  BUSINESS_PROPOSAL.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Hancock_Universal_Finetune.ipynb  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Modelfile.0ai  OWNERSHIP.md  README.md  ROADMAP.md  SECURITY.md  TOOL_INTEGRATION.md  data_integrity.py  docker-compose.yml  hancock_agent.py  hancock_constants.py  hancock_cpu_finetune.py  hancock_finetune_gpu.py  hancock_finetune_v3.py  hancock_langgraph.py  hancock_pipeline.py  input_validator.py  orchestration_controller.py  pyproject.toml  requirements-dev.txt  requirements-finetune.txt  requirements.txt  supply_chain_guard.py  zero_day_guard_config.json  zero_day_guard_eval.py
.clusterfuzzlite/: Dockerfile  build.sh
chroma_db/: chroma.sqlite3
collectors/: burp_post_exploit.py  nmap_recon.py  osint_geolocation.py  registry.py  sqlmap_exploit.py
deploy/: Dockerfile  Dockerfile.sandbox  docker-compose.yml  graceful_shutdown.py  startup_checks.py
docs/: ci-cd.md  deployment.md  monitoring.md  openapi.yaml  osint-geolocation.md  performance.md  production-checklist.md
fuzz/: README.md  fuzz_api_inputs.py  fuzz_atomic_parser.py  fuzz_formatter.py  fuzz_formatter_v3.py  fuzz_ghsa_parser.py  fuzz_graphql_security_tester.py  fuzz_input_validator.py  fuzz_mitre_parser.py  fuzz_nvd_parser.py  fuzz_osint_geolocation.py  fuzz_webhook_request_parsing.py  fuzz_webhook_signature.py  fuzz_xml_parsing.py
monitoring/: __init__.py  (+6 more)
(+147 files in other folders)
