[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hancock-client"
version = "0.6.0"
description = "Hancock AI Cybersecurity Agent — Python SDK (NVIDIA NIM backend)"
readme = "clients/python/README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Johnny Watters", email = "0ai@cyberviserai.com" }]
maintainers = [{ name = "0ai-Cyberviser", email = "cyberviser@proton.me" }]
keywords = ["cybersecurity", "ai", "pentest", "soc", "llm", "nvidia", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://cyberviser.netlify.app"
Repository = "https://github.com/0ai-Cyberviser/Hancock"
Documentation = "https://cyberviser.netlify.app/api"

[project.scripts]
hancock = "hancock_cli:main"

[tool.setuptools]
py-modules = ["hancock_client", "hancock_cli"]

[tool.setuptools.package-dir]
"" = "clients/python"

[tool.pylint."messages_control"]
disable = ["import-error"]
